fixed button focus styles, add mask behind header (#64)

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -38,9 +38,22 @@
   text-align: center;
   line-height: 1;
   background: #000;
-  @include clearfix();
   transition: background $mc-condensed-ease-timing ease;
   z-index: 120;  // modals are 130, one step below.
+
+  // sits above header to hide elements
+  // above the page (subnavs etc)
+  &:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    left: 0;
+    right: 0;
+    top: -300px;
+    background: #000000;
+    z-index: 9999;
+  }
 
   // Overwrite core
   .mc-container { padding: 0; }
